Added Async class to provide try-with-resource functionality with async operations on resource